--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Code injecte automatiquement apres l'installation material */
+@import "tailwindcss/theme.css";
+@import "tailwindcss/utilities.css";
+
+/* Code injecte automatiquement apres l'installation material */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif}
+
