--- a/src/app/components/todo-detail/todo-detail.component.html
+++ b/src/app/components/todo-detail/todo-detail.component.html
@@ -10,7 +10,7 @@
       <mat-card-title>Edit Todo</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="mt-5" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+      <form class="mt-5" [formGroup]="formGroup" (ngSubmit)="onSave()">
         <div id="title-container">
           <mat-form-field class="w-60">
             <mat-label>Title</mat-label>
