--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,7 +2,7 @@
   id="full-cover-background"
   class="flex h-full items-center justify-center"
 >
-  <div id="centered-block" class="flex-col p-7 rounded-2xl" >
+  <div id="centered-block" class=" bg-white flex-col p-7 rounded-2xl" >
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
       <h2 class="text-center">Sign up</h2>
       <div id="name-container">
